--- a/latex_template.tex
+++ b/latex_template.tex
@@ -29,6 +29,8 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 \usepackage{url}
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
+\newcommand*{\fullref}[1]{\hyperref[{#1}]{\ref*{#1} \nameref*{#1}}} % One single link
+
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
 %----------------------------------------------------------------------------------------
