--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -3,6 +3,11 @@
 	name={administrator},
 	description={TODO}
 }
+\newglossaryentry{user}
+{
+	name={user},
+	description={TODO}
+}
 \newglossaryentry{storage}
 {
 	name={storage},
