--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -8,6 +8,31 @@
 	name={user},
 	description={TODO}
 }
+\newglossaryentry{new-node}
+{
+	name={new node},
+	description={TODO}
+}
+\newglossaryentry{node-identifier}
+{
+	name={node identifier},
+	description={TODO}
+}
+\newglossaryentry{location}
+{
+	name={location},
+	description={TODO}
+}
+\newglossaryentry{leaving-node}
+{
+	name={leaving node},
+	description={TODO}
+}
+\newglossaryentry{metadata}
+{
+	name={metadata},
+	description={TODO}
+}
 \newglossaryentry{storage}
 {
 	name={storage},
