--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -28,6 +28,11 @@
 	name={leaving node},
 	description={TODO}
 }
+\newglossaryentry{sending-node}
+{
+	name={sending node},
+	description={TODO}
+}
 \newglossaryentry{metadata}
 {
 	name={metadata},
