--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -113,3 +113,26 @@
 	description={TODO}
 }
 
+\newglossaryentry{system}
+{
+    name={system},
+    description={TODO: The whole backup system. What boundaries does that include?}
+}
+
+\newglossaryentry{node-cache}
+{
+    name={node-cache},
+    description={TODO: The cache of the client, in which he rememers target nodes from the management}
+}
+
+\newglossaryentry{state}
+{
+    name={state},
+    description={TODO: Also link the state attachment}
+}
+
+\newglossaryentry{medium}
+{
+    name={medium},
+    description={TODO: This is the storage medium, usually a hdd}
+}
