--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -15,25 +15,25 @@ Figure \ref{fig:architecture-overview} presents an overview over the Redbackup s
 \subsection{Actors}
 
 \subsubsection{User}
-A typical \emph{User} does not want to interact with the system at any time. All he/she wants is to be sure that all his/her data is safely backed up.
+A typical \gls{user} does not want to interact with the system at any time. All he/she wants is to be sure that all his/her data is safely backed up.
 
-To simplify the implementation for the study project, the \emph{User} must instruct the \emph{Client} manually (create and restore backup).
+To simplify the implementation for the study project, the \gls{user} must instruct the \gls{client} manually (create and restore backup).
 
 \paragraph{Responsibilities}
 \begin{itemize}
-    \item Instruct the \emph{Client} to create a Backup
-    \item Instruct the \emph{Client} to restore a Backup
+    \item Instruct the \gls{client} to create a Backup
+    \item Instruct the \gls{client} to restore a Backup
 \end{itemize}
 
 
 \subsubsection{Administrator}
-An \emph{Administrator} wants to interact with the system as less as possible. He/She wants to be sure that the system runs smoothly. If something goes wrong, he/she wants to be able to fix it within a few minutes.
+An \gls{administrator} wants to interact with the system as less as possible. He/She wants to be sure that the \gls{system} runs smoothly. If something goes wrong, he/she wants to be able to fix it within a few minutes.
 
 \paragraph{Responsibilities}
 \begin{itemize}
-    \item Instruct to the \emph{Management} to add/remove \emph{Nodes} from the System
-    \item Ensure that the \emph{Management} runs properly (i.g. monitor it)
-    \item Act if the \emph{Management} notifies him/her about any anomalies
+    \item Instruct to the \gls{management} to add/remove \glspl{node} from the System
+    \item Ensure that the \gls{management} runs properly (i.g. monitor it)
+    \item Act if the \gls{management} notifies him/her about any anomalies
 \end{itemize}
 
 \subsection{Components}
@@ -44,16 +44,16 @@ An \emph{Administrator} wants to interact with the system as less as possible. H
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{resources/client_domain_model}
-    \caption[Client Domain Model]{Domain Model illustrating the \emph{Client}s perspective}
+    \caption[Client Domain Model]{Domain Model illustrating the \glspl{client} perspective}
 \end{figure}
 
 \begin{itemize}
-    \item The \emph{Client} knows the \emph{Management} by configuration.
-    \item The \emph{Client} queries the \emph{Management} for a list of \emph{Node}s, to which he can send backups or restore previous backups. He caches the results in its \emph{Node Cache}.
-    \item The \emph{Chunk Index} hierarchically models the file system. This structure might change in the future when supporting symlinks and permissions \footnote{See e.g. \url{https://borgbackup.readthedocs.io/en/stable/internals/data-structures.html}}.
-    \item The relationship between a given \emph{File} and its \emph{Chunk}s is essential. The \emph{Client} splits a \emph{File} into multiple \emph{Chunks} to speed up the backup of large data. During the study project, a \emph{File} consists of exactly one \emph{Chunk}.
-    \item A \emph{Chunk} is identified by its \emph{Chunk Identifier}, which can be calculated using a hash function which takes the \emph{Chunk Contents}  as input.
-    \item The \emph{Chunk Contents} do not have be present on the \emph{Client}. During backup, the \emph{Client} can calculate the \emph{Chunk Contents} and the corresponding \emph{Chunk Identifer} from the \emph{Files} on the disk. On Restore, the \emph{Client} fetches the \emph{Chunk Contents} from a \emph{Node} and reassembles the \emph{File} based on the \emph{Chunk Index}.
+    \item The \gls{client} knows the \gls{management} by configuration.
+    \item The \gls{client} queries the \gls{management} for a list of \glspl{node}, to which he can send backups or restore previous backups. He caches the results in its \gls{node-cache}.
+    \item The \gls{chunk-index} hierarchically models the file system. This structure might change in the future when supporting symlinks and permissions \footnote{See e.g. \url{https://borgbackup.readthedocs.io/en/stable/internals/data-structures.html}}.
+    \item The relationship between a given \gls{file} and its \glspl{chunk} is essential. The \gls{client} splits a \gls{file} into multiple \glspl{chunk} to speed up the backup of large data. During the study project, a \gls{file} consists of exactly one \gls{chunk}.
+    \item A \gls{chunk} is identified by its \gls{chunk-identifier}, which can be calculated using a hash function which takes the \glspl{chunk-content}  as input.
+    \item The \glspl{chunk-content} do not have be present on the \gls{client}. During backup, the \gls{client} can calculate the \glspl{chunk-content} and the corresponding \gls{chunk-identifier} from the \glspl{file} on the disk. On Restore, the \gls{client} fetches the \glspl{chunk-content} from a \gls{node} and reassembles the \gls{file} based on the \gls{chunk-index}.
 \end{itemize}
 
 % TODO: Serialized Metadata = Serialized version of a given Chunk Index.
@@ -62,21 +62,21 @@ An \emph{Administrator} wants to interact with the system as less as possible. H
 
 
 \begin{itemize}
-    \item Keeping the \emph{Node Cache} up to date
+    \item Keeping the \gls{node-cache} up to date
     \item Create Backups (See Scenario \ref{sec:scenario-create-backup}: \nameref{sec:scenario-create-backup})
     \begin{itemize}
-        \item Building/Calculating the \emph{Chunk Index}
-        \item Serialize the \emph{Chunk Index}
-        \item Send \emph{Chunk}s to \emph{Node}s
-        \item Mark \emph{Chunk}s as \emph{Root Handle}s
+        \item Building/Calculating the \gls{chunk-index}
+        \item Serialize the \gls{chunk-index}
+        \item Send \glspl{chunk} to \glspl{node}
+        \item Mark \glspl{chunk} as \glspl{root-handle}
     \end{itemize}
     \item Restore Backups (See Scenario \ref{sec:scenario-backup-restore}: \nameref{sec:scenario-backup-restore})
     \begin{itemize}
-        \item Fetch \emph{Root Handle}s from \emph{Node}s
-        \item Fetch \emph{Chunk}s from \emph{Nodes}
-        \item Deserialize \emph{Chunk Indexe}s
-        \item Reassemble \emph{Chunks} into \emph{File}s (not required for the study project)
-        \item Let the \emph{User} choose which \emph{File}s from which \emph{Chunk Index} shall be restored.
+        \item Fetch \glspl{root-handle} from \glspl{node}
+        \item Fetch \glspl{chunk} from \glspl{node}
+        \item Deserialize \glspl{chunk-index}
+        \item Reassemble \glspl{chunk} into \glspl{file} (not required for the study project)
+        \item Let the \gls{user} choose which \glspl{file} from which \gls{chunk-index} shall be restored.
     \end{itemize}
 \end{itemize}
 
@@ -85,50 +85,50 @@ An \emph{Administrator} wants to interact with the system as less as possible. H
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{resources/node_domain_model}
-    \caption[Node Domain Model]{Domain Model illustrating the \emph{Node}s perspective}
+    \caption[Node Domain Model]{Domain Model illustrating the \glspl{node} perspective}
 \end{figure}
 
 \begin{itemize}
-    \item A \emph{Node} is identified by its unique \emph{Node Identifier}. It listens on a certain \emph{Address} and \emph{Port}.
-    \item A \emph{Node} is also associated with a \emph{Location} which will be a replication criteria in the future.
-    \item A \emph{Node} knows the \emph{Management} by configuration and exchanges data with it on a regular basis (Messages \emph{get nodes metadata} and \emph{post nodes metadata})
-    \item A \emph{Node} is in a given \emph{State} and acts differently depending on it (See Figure \ref{fig:node-states}).
+    \item A \gls{node} is identified by its unique \gls{node-identifier}. It listens on a certain \emph{IP-Address} and \emph{Port}.
+    \item A \gls{node} is also associated with a \gls{location} which will be a replication criteria in the future.
+    \item A \gls{node} knows the \gls{management} by configuration and exchanges data with it on a regular basis (Messages \emph{get nodes metadata} and \emph{post nodes metadata})
+    \item A \gls{node} is in a given \gls{state} and acts differently depending on it (See Figure \ref{fig:node-states}).
     \begin{itemize}
-        \item \emph{uninitialized}: The \emph{Node} queries the \emph{Management} for initialization and does nothing else.
-        \item \emph{participating}: This is the "normal" state in which a \emph{Node} accepts backups, performs replication and sends requested data.
-        \item \emph{unreachable}: A \emph{Node} is marked as \emph{unreachable} if any other \emph{Node} or the \emph{Management} can not reach it. A node never sees itself in this state.
-        \item  \emph{leaving soon}: The \emph{Node} does not answer any requests and ensures that all its data is replicated. When it is done, it automatically switches into the \emph{left} state.
-        \item \emph{left}: The \emph{Node} has nothing to do in this state and can shut down.
+        \item \emph{uninitialized}: The \gls{node} queries the \gls{management} for initialization and does nothing else.
+        \item \emph{participating}: This is the "normal" state in which a \gls{node} accepts backups, performs replication and sends requested data.
+        \item \emph{unreachable}: A \gls{node} is marked as \emph{unreachable} if any other \gls{node} or the \gls{management} can not reach it. A node never sees itself in this state.
+        \item  \emph{leaving soon}: The \gls{node} does not answer any requests and ensures that all its data is replicated. When it is done, it automatically switches into the \emph{left} state.
+        \item \emph{left}: The \gls{node} has nothing to do in this state and can shut down.
     \end{itemize}
-    \item A \emph{Node} knows all other \emph{Node}s in the System and maintains a \emph{State} (see Figure~\ref{fig:node-states}) for them as well.
-    \item The \emph{Chunk Contents} are stored in a \emph{Storage}. See \ref{sec:component-storage} Component Storage for further details.
-    \item Which \emph{Chunk}s are stored on the \emph{Node}, their \emph{Expiration Date} and the information whether a \emph{Chunk} is a \emph{Root Handle} is stored in the \emph{Chunk Table}.
+    \item A \gls{node} knows all other \glspl{node} in the System and maintains a \gls{state} (see Figure~\ref{fig:node-states}) for them as well.
+    \item The \glspl{chunk-content} are stored in a \gls{storage}. See \ref{sec:component-storage} Component Storage for further details.
+    \item Which \glspl{chunk} are stored on the \gls{node}, their \gls{expiration-date} and the information whether a \gls{chunk} is a \gls{root-handle} is stored in the \gls{chunk-table}.
 \end{itemize}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{resources/node_state}
-    \caption[Node States]{A UML State Diagram describing the \emph{State}s of a \emph{Node}}
+    \caption[Node States]{A UML State Diagram describing the \glspl{state} of a \gls{node}}
     \label{fig:node-states}
 \end{figure}
 
 \paragraph{Responsibilities}
 
 \begin{itemize}
-    \item Send \emph{Metadata} periodically (Messages \emph{get nodes metadata} and \emph{post nodes metadata}) in order to ...
+    \item Send \gls{metadata} periodically (Messages \emph{get nodes metadata} and \emph{post nodes metadata}) in order to ...
     \begin{itemize}
         \item Perform initialization
-        \item Learning about other \emph{Nodes}
-        \item Start the \emph{leaving} process and notify the \emph{Management} when it is completed
-        \item Send \emph{Metadata} to the \emph{Management} so that it can perform health-checks (e.g. verify the timestamp)
+        \item Learning about other \glspl{node}
+        \item Start the \emph{leaving} process and notify the \gls{management} when it is completed
+        \item Send \gls{metadata} to the \gls{management} so that it can perform health-checks (e.g. verify the timestamp)
     \end{itemize}
-    \item Maintain the \emph{Chunk Table}
+    \item Maintain the \gls{chunk-table}
     \begin{itemize}
-        \item Update \emph{Expiration Date}s
-        \item Add new \emph{Chunks}
-        \item Remove expired \emph{Chunks}
+        \item Update \glspl{expiration-date}
+        \item Add new \glspl{chunk}
+        \item Remove expired \glspl{chunk}
     \end{itemize}
-    \item Handle possible \emph{Storage} issues (see Scenario \ref{sec:scenario-storage-errors} \nameref{sec:scenario-storage-errors})
+    \item Handle possible \gls{storage} issues (see Scenario \ref{sec:scenario-storage-errors} \nameref{sec:scenario-storage-errors})
     \item Reply to \emph{get designation}  (Scenario \ref{sec:scenario-create-backup} \nameref{sec:scenario-create-backup}) , \emph{get root handles} (Scenario \ref{sec:scenario-backup-restore} \nameref{sec:scenario-backup-restore}) and \emph{get chunks} requests
     \item Replicate Data (See Scenario \ref{sec:scenario-data-replication} \nameref{sec:scenario-data-replication})
     \item Handle \emph{leaving} process (see Scenario \ref{sec:scenario-node-leave-planned} \nameref{sec:scenario-node-leave-planned})
@@ -140,25 +140,25 @@ An \emph{Administrator} wants to interact with the system as less as possible. H
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{resources/storage_domain_model}
-    \caption[Storage Domain Model]{Domain Model illustrating the \emph{Storage}s perspective}
+    \caption[Storage Domain Model]{Domain Model illustrating the \gls{storage}s perspective}
 \end{figure}
 
 \begin{itemize}
-    \item The main purpose of the \emph{Storage} component is to persist \emph{Chunk Contents}. A \emph{Storage} is associated with one \emph{Node} which stores, loads and deletes \emph{Chunk Contents} by its \emph{Chunk Identifier} on the \emph{Storage}. The same \emph{Node} is notified by the \emph{Storage} e.g. when corrupted data is detected.
-    \item A \emph{Chunk} should also monitor the \emph{Medium}s, on which the \emph{Chunk Contents} are stored, for possible issues and report them to the \emph{Node}. This feature, however, is not implemented in the study project.
-    \item The \emph{Storage} component is deployed on the same host as the \emph{Node} that is using it.
+    \item The main purpose of the \gls{storage} component is to persist \glspl{chunk-content}. A \gls{storage} is associated with one \gls{node} which stores, loads and deletes \glspl{chunk-content} by its \gls{chunk-identifier} on the \gls{storage}. The same \gls{node} is notified by the \gls{storage} e.g. when corrupted data is detected.
+    \item A \gls{chunk} should also monitor the \glspl{medium}, on which the \glspl{chunk-content} are stored, for possible issues and report them to the \gls{node}. This feature, however, is not implemented in the study project.
+    \item The \gls{storage} component is deployed on the same host as the \gls{node} that is using it.
 \end{itemize}
 
 
 \paragraph{Responsibilities}
 
 \begin{itemize}
-    \item Store \emph{Chunk Content}s
-    \item Load and return the \emph{Chunk Contents} for a given \emph{Chunk Identifier}
-    \item Delete the \emph{Chunk Contents} for a given \emph{Chunk Identifier}
-    \item Detect possible corruption of \emph{Chunk Contents}
-    \item Perform service checks on the \emph{Medium}s (e.g. S.M.A.R.T tests)
-    \item Notify the \emph{Node} when a corruption / integrity problem occurs
+    \item Store \glspl{chunk-content}
+    \item Load and return the \glspl{chunk-content} for a given \gls{chunk-identifier}
+    \item Delete the \glspl{chunk-content} for a given \gls{chunk-identifier}
+    \item Detect possible corruption of \glspl{chunk-content}
+    \item Perform service checks on the \glspl{medium} (e.g. S.M.A.R.T tests)
+    \item Notify the \gls{node} when a corruption / integrity problem occurs
 \end{itemize}
 
 \subsubsection{Management}
@@ -166,20 +166,20 @@ An \emph{Administrator} wants to interact with the system as less as possible. H
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.75\linewidth]{resources/management_domain_model}
-    \caption[Management Domain Model]{Domain Model illustrating the \emph{Management}s perspective}
+    \caption[Management Domain Model]{Domain Model illustrating the \gls{management}'s perspective}
 \end{figure}
 \begin{itemize}
-    \item The \emph{Administrator} is the only Actor interacting with the \emph{Management}. He/She sends instructions (e.g. add new node) and is notified by the \emph{Management} about any anomalies.
-    \item \emph{Clients} fetch a list of all \emph{Nodes} from the \emph{Management} (See Component \ref{sec:component-client} \nameref{sec:component-client} for further details). As for the study project, the \emph{Management} does not know anything about \emph{Client}s, but this might change when authentication is implemented in the future.
-    \item The \emph{Management} maintains \emph{Metadata} for each \emph{Node} in the system and sends that information every \emph{Node} when they post their \emph{Metadata}.
+    \item The \gls{administrator} is the only Actor interacting with the \gls{management}. He/She sends instructions (e.g. add new node) and is notified by the \gls{management} about any anomalies.
+    \item \glspl{client} fetch a list of all \glspl{node} from the \gls{management} (See Component \ref{sec:component-client} \nameref{sec:component-client} for further details). As for the study project, the \gls{management} does not know anything about \glspl{client}, but this might change when authentication is implemented in the future.
+    \item The \gls{management} maintains \gls{metadata} for each \gls{node} in the system and sends that information every \gls{node} when they post their \gls{metadata}.
 \end{itemize}
 
 \paragraph{Responsibilities}
 \begin{itemize}
-    \item Add and remove \emph{Nodes}
-    \item Notify the \emph{Administrator} e.g. if a \emph{Node} leaves unexpectedly.
-    \item Receive \emph{Metadata} from the \emph{Nodes} and reply with \emph{Metadata}
-    \item Send list of \emph{Nodes} to the \emph{Client}s
+    \item Add and remove \glspl{node}
+    \item Notify the \gls{administrator} e.g. if a \gls{node} leaves unexpectedly.
+    \item Receive \gls{metadata} from the \glspl{node} and reply with \gls{metadata}
+    \item Send list of \glspl{node} to the \glspl{client}
 \end{itemize}
 
 \subsection{Scenarios}
